(alias
 (name runtest)
 (deps noise-c-basic.txt)
 (action
  (run ./test_vectors.exe)
 )
 )

(executable
 (name test_vectors)
 (libraries
  hex
  noise
  oUnit
  ppx_deriving_yojson.runtime
  test_helpers
  yojson
 )
 (preprocess
  (pps
   ppx_deriving.std
   ppx_deriving_yojson
  ))
 (flags :standard -w -39)
)
